[tool.poetry]
name = "xrpl-sidechain-cli"
version = "1.0.0b3"
description = "A CLI that helps you set up an XRPL sidechain."
readme = "README.md"
repository = "https://github.com/xpring-eng/sidechain-cli"
authors = ["Mayukha Vadari <mvadari@ripple.com>"]
keywords = [
  "xrp",
  "xrpl",
  "cryptocurrency",
]
license = "MIT"
include = [
  "LICENSE",
]
packages = [
  { include = "sidechain_cli" },
]

[tool.poetry.scripts]
sidechain-cli = 'sidechain_cli.main:main'

[tool.poetry.dependencies]
python = "^3.7.1"
click = "^8.1.3"
tabulate = ">=0.8.9,<0.10.0"
httpx = ">=0.18.1,<0.24.0"
websockets = "^10.3"
Jinja2 = "^3.1.2"
psutil = "^5.9.2"
docker = "^6.0.0"
xrpl-py = "^1.8.0b0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.10"
flake8-black = "^0.3.5"
flake8-docstrings = "^1.5.0"
mypy = "^0"
isort = "^5.7.0"
flake8-isort = "^5.0.3"
flake8-annotations = "^2.5.0"
flake8-absolute-import = "^1.0"
darglint = "^1.5.8"
types-tabulate = "^0.9.0"
coverage = "^6.5.0"
pytest = "^7.2.0"

[tool.isort]
# Make sure that isort's settings line up with black
profile = "black"

[tool.coverage.run]
branch = true
command_line = "-m pytest tests"
source = ["sidechain_cli"]

[tool.coverage.report]
show_missing = true
fail_under = 75
precision = 2

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
